用户添加iso字段